<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ovi_label">OVI Label</string>
    <string name="ovi_input_text">OVI input text</string>
    <string name="version">V %s</string>
    <string name="log_in">LOG IN</string>
    <string name="get_otp">GET OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="haven_t_received_otp_yet">Haven’t received OTP yet?</string>
    <string name="an_otp_has_been_sent_to_x_xxx_xxx_456_n_please_enter_the_6_digit_otp">An OTP has been sent to +X XXX XXX 456\nPlease enter the 6-digit OTP</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="or">OR</string>
    <string name="what_s_your_email_address">What’s your email address?</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="there_is_no_account_with_this_email_address_yet_do_you_want_to_sign_up">There is no account with this email address yet. Do you want to sign up?</string>
    <string name="yes_sign_up">YES, SIGN UP</string>
    <string name="forgot_your_password_request_a_new_one">Forgot your password? Request a new one.</string>
    <string name="log_in_with_phone_number">Log in with Phone number</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address_and_we_ll_send_you_an_email_with_all_the_instructions">Enter your email address and we’ll send you an email with all the instructions.</string>
    <string name="send_me_instructions">SEND ME INSTRUCTIONS</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="check_your_email">Check your email</string>
    <string name="we_sent_a_password_reset_link_to_jan_hotmail_com_with_all_the_instructions">We sent a password reset link to %s with all the instructions.</string>
    <string name="didn_t_receive_the_email_click_to_resend">Didn’t receive the email? Click to resend</string>
    <string name="set_new_password">Set new password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="minimum_8_characters_with_at_least_1_number">Minimum 8 characters with at least 1 number.</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="password_reset">Password reset</string>
    <string name="continue_">CONTINUE</string>
    <string name="please_choose_your_role">Please choose your role</string>
    <string name="amet_minim_mollit_non_deserunt_ullamco_est_sit_aliqua_dolor_do_amet_sint_velit_officia_consequat_duis">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis.</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="next">NEXT</string>
    <string name="please_enter_race">Please enter race</string>
    <string name="please_enter_ethnicity">Please enter ethnicity</string>
    <string name="to_which_gender_identify_do_you_most_identifiy">To which gender identity do you most identify ?</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone_numbre">Please enter phone number</string>
    <string name="please_enter_zip_code">Please enter ZIP code</string>
    <string name="skip">Skip</string>
    <string name="please_confirm_your_address">Please confirm your address</string>
    <string name="building_no_street">Street</string>
    <string name="area_city">City</string>
    <string name="state">State</string>
    <string name="country">County</string>
    <string name="zipcode">Zip code</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="confirm_address_caps">CONFIRM ADDRESS</string>
    <string name="search">Search...</string>
    <string name="are_you_employed_either_part">Are you employed (either part or full time)?</string>
    <string name="what_is_your_highest_educatiion">What is your highest education achieved?</string>
    <string name="have_you_been_homeless_at_least_once_in_the_past_two_years">Have you been homeless at least once in the past two years?</string>
    <string name="in_the_past_two_years_have_you_participated_in_an_alcohol_or_drug_abuse_assessment_counseling">In the past two years have you participated in an alcohol or drug abuse assessment/counseling?</string>
    <string name="we_would_like_to_know_how_you_would_describe_yourself_using_the_options_below_this_will_help_us_when_we_evaluate_the_program">We would like to know how you would describe yourself using the options below. This will help us when we evaluate the program.</string>
    <string name="have_you_ever_been_in_a_jail_prison_correctional_facility_or_juvenile_or_community_detention_facility_at_least_once_in_the_past_two_years">Have you ever been in a jail, prison, correctional facility, or juvenile or community detention facility at least once in the past two years?</string>
    <string name="have_you_given_birth_to_a_child_or_i_am_a_father_to_a_child_that_has_been_born_in_the_last_two_years">Have you given birth to a child OR I am a father to a child that has been born in the last two years?</string>
    <string name="do_you_have_a_medicaid_plan_or_some_other_health_insurance_coverage">Do you have a Medicaid plan or some other health insurance coverage?</string>
    <string name="do_you_feel_confident_in_your_abilities_to_live_independently_without_outside_financial_assistance">Do you feel confident in your abilities to live independently, without outside financial assistance?</string>
    <string name="are_you_participating_in_one_of_the_following_independent_living_programs_extended_foster_care_efc_postsecondary_education_services_and_support_pess_or_aftercare_services">Are you participating in one of the following independent living programs: Extended Foster Care (EFC), Postsecondary Education Services and Support (PESS), or Aftercare Services?</string>
    <string name="please_review_and_submit">Please review and submit</string>
    <string name="once_submitted_you_can_always_login_at_a_later_date_and_revise_your_responses_please_feel_free_to_update_your_profile_as_you_experience_any_changes_thanks">Once submitted, you can always login at a later date and revise your responses. Please feel free to update your profile as you experience any changes. Thanks!</string>
    <string name="congrats_your_account_is_ready">Congrats! Your account is ready.</string>
    <string name="this_is_your_registration_id_james_ovi_com">This is your registration ID %s</string>
    <string name="tell_us_a_little_more_about_you">Tell us a little more about you!</string>
    <string name="go_to_home">Go to home</string>
    <string name="please_enter_your_agency">Please enter Your Agency</string>
    <string name="you_should_have_the_list_of_agencies_but_let_me_know_if_you_need_the_information_again_thanks">You should have the list of agencies but let me know if you need the information again. Thanks</string>
    <string name="please_enter_youth_council_name">Please enter Youth Council Name</string>
    <string name="ovi_would_like_to_know_if_you_are_participating_in_a_organized_youth_council_or_advisory_board_if_not_we_may_be_reaching_out_to_get_you_connected_to_one_near_you">OVI would like to know if you are participating in a organized youth council or advisory board. If not, we may be reaching out to get you connected to one near you.</string>
    <string name="please_enter_shirt_size">Please enter shirt size</string>
    <string name="we_d_like_to_know_your_size_for_ordering_swag_promotional_products_like_t_shirts_and_polos">We\'d like to know your size for ordering swag (promotional products), like t-shirts and polos.</string>
    <string name="please_upload_profile_picture">Please upload profile picture</string>
    <string name="give_us_your_best_shot_we_d_like_to_see_a_headshot_picture_of_you_wearing_an_ovi_shirt_or_something_more_business_like">Give us your best shot! We\'d like to see a headshot picture of you wearing an OVI shirt or something more business like.</string>
    <string name="select_your_current_or_upcoming_event">Select your current or upcoming event</string>
    <string name="this_information_will_help_us_when_we_evaluate_the_program">This information will help us when we evaluate the program.</string>
    <string name="by_signing_up_you_agree_to_ovi_terms_of_service_and_privacy_policy">By signing up you agree to our Terms of service and Privacy policy.</string>
    <string name="submit">SUBMIT</string>
    <string name="please_enter_date_of_birth">Please enter date of birth</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="race">Race</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="gender_identity">Gender Identity</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="upcoming_events_caps">UPCOMING EVENTS</string>
    <string name="address">Address</string>
    <string name="do_you_have_at_least_one_adult_in_your_life_other_than_the_person_assigned_to_your_foster_care_or_il_case_that_you_can_go_to_for_advice_or_emotional_support">Do you have at least one adult in your life, other than the person assigned to your foster care or IL case, that you can go to for advice or emotional support?</string>
    <string name="use_a_mailing_address_that_we_can_send_you_relevant_information_educational_materials_and_other_cool_stuff">Use a mailing address that we can send you relevant information, educational materials, and other cool stuff.</string>
    <string name="thank_you_for_completing_the_registration">Thank you for completing the registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_for_now_i_ll_do_this_later">Skip for now, I’ll do this later</string>
    <string name="home">Home</string>
    <string name="calender">Calender</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="event">Event</string>
    <string name="my_profile">My Profile</string>
    <string name="event_track">Event Track</string>
    <string name="name">Name</string>
    <string name="phone_">Phone #</string>
    <string name="_1_contact_details">Contact Details</string>
    <string name="_4_agency">Agency</string>
    <string name="youth_council_name">Youth Council Name</string>
    <string name="_3_other_details">Other Details</string>
    <string name="role">Role</string>
    <string name="group">Group</string>
    <string name="joined_on">Joined On</string>
    <string name="_2_address">Address</string>
    <string name="shirt_size">Shirt Size</string>
    <string name="gender">Gender</string>
    <string name="events_tracker">Events tracker</string>
    <string name="invited_5_accepted_4_registered_4_attended_4">Invited(%d) \t Accepted(%d) \t Registered(%d) \t Attended(%d)</string>
    <string name="ovi_dale_carnegie_training_class">OVI Dale Carnegie Training Class</string>
    <string name="june_23_2022_fremont_ca">June 23,2022 . Fremont CA</string>
    <string name="attended">Attended</string>
    <string name="jyj_2011_jyj_worldwide_concert_barcelona">JYJ 2011 JYJ Worldwide Concert Barcelona</string>
    <string name="dont_have_an_account_join_ovi_network">Don\'t have an account? Join OVI network</string>
    <string name="next_upper">NEXT</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="enter_the_date_of_birth">Enter the Date of Birth</string>
    <string name="enter_the_value">Enter the value</string>
</resources>