<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/guideline_20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/please_enter_date_of_birth"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/ts_20sp"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top" />

        <org.ovi.widget.OviLabeledEditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40dp"
            android:background="@drawable/bg_grey_bordered"
            android:fontFamily="@font/opensans_bold"
            android:hint="@string/enter_the_date_of_birth"
            android:inputType="textPostalAddress"
            app:endIconDrawable="@drawable/ic_fi_calendar"
            app:inputTextColor="@color/text_color_dark_grey"
            app:labelText="@string/date_of_birth"
            app:labelTextColor="@color/text_color_dark_grey"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />


        <org.ovi.widget.OviButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:text="@string/next_upper"
            app:layout_constraintBottom_toTopOf="@+id/tvSkip"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSkip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_12dp"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:padding="@dimen/margin_12dp"
            android:text="@string/skip"
            android:textColor="@color/toolbar_title_color"
            android:textSize="@dimen/ts_13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>